--- a/index.html
+++ b/index.html
@@ -200,10 +200,21 @@
             align-items: center;
             color: white;
             text-decoration: none;
-            font-size: 0.9rem;
+            font-size: 0.85rem;
             font-weight: 800;
-            margin: 0.4rem 0;
-            padding: 0.6rem 1rem;
+            margin: 0.35rem 0;
+            padding: 0.5rem 1rem;
+            border-radius: 15px;
+            background: rgba(255, 255, 255, 0.2);
+            text-transform: uppercase;
+            transition: all 0.3s ease;
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            position: relative;
+            z-index: 2;
+            letter-spacing: 1px;
+            box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+            transform: rotate(1deg);
+        }
 
         .mobile-menu a::before {
             content: '';
